scripts/nullaway/annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8.txt
../annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/Transitions.java:14: error: [NullAway] initializer method does not guarantee @NonNull field when (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
		public TransitionBuilder(String aFrom, boolean anIsDemotion) {
		       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/SimpleConfiguration.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields initial (line 16), states (line 17), clock (line 18), issuesFactory (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SimpleConfiguration(
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/SimpleConfiguration.java:26: error: [NullAway] parameter anIssueTrackerFactory is @NonNull, but parameter in superclass method com.sjl.health.Configuration.init(com.sjl.health.IssueTrackerFactory,com.sjl.health.internal.Clock) is @Nullable
	public void init(IssueTrackerFactory anIssueTrackerFactory, Clock aClock) {
	                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/SimpleThreadSafeHealth.java:101: error: [NullAway] dereferenced expression _before is @Nullable
			if (!_before.equals(_after))
			            ^
    (see http://t.uber.com/nullaway )
../annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableInstant.java:14: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableStatistics.java:18: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/MutableState.java:105: error: [NullAway] dereferenced expression whyChanged.getCause() is @Nullable
			_sb.append(whyChanged.getCause().getMessage());
			                                ^
    (see http://t.uber.com/nullaway )
7 errors
